--- a/hangman.html
+++ b/hangman.html
@@ -5,6 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./script.js" type="module" defer></script>
     <title>Hangman</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Reddit+Mono:wght@200..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <h1 class="main-heading">Hangman</h1>
+    <section class="game">
+      <div class="game__word" id="hangmanWord"></div>
+      <div class="game__picture" id="hangmanPicture"></div>
+    </section>
+    <section class="input">
+      <!-- <div class="input__container"> -->
+      <div class="input__row-1">
+        <button class="keyboard__button" id="qButton">Q</button>
+        <button class="keyboard__button" id="wButton">W</button>
+        <button class="keyboard__button" id="eButton">E</button>
+        <button class="keyboard__button" id="rButton">R</button>
+        <button class="keyboard__button" id="tButton">T</button>
+        <button class="keyboard__button" id="yButton">Y</button>
+        <button class="keyboard__button" id="uButton">U</button>
+        <button class="keyboard__button" id="iButton">I</button>
+        <button class="keyboard__button" id="oButton">O</button>
+        <button class="keyboard__button" id="pButton">P</button>
+      </div>
+      <div class="input__row-2">
+        <button class="keyboard__button" id="aButton">A</button>
+        <button class="keyboard__button" id="sButton">S</button>
+        <button class="keyboard__button" id="dButton">D</button>
+        <button class="keyboard__button" id="fButton">F</button>
+        <button class="keyboard__button" id="gButton">G</button>
+        <button class="keyboard__button" id="hButton">H</button>
+        <button class="keyboard__button" id="jButton">J</button>
+        <button class="keyboard__button" id="kButton">K</button>
+        <button class="keyboard__button" id="lButton">L</button>
+      </div>
+      <div class="input__row-3">
+        <button class="keyboard__button" id="zButton">Z</button>
+        <button class="keyboard__button" id="xButton">X</button>
+        <button class="keyboard__button" id="cButton">C</button>
+        <button class="keyboard__button" id="vButton">V</button>
+        <button class="keyboard__button" id="bButton">B</button>
+        <button class="keyboard__button" id="nButton">N</button>
+        <button class="keyboard__button" id="mButton">M</button>
+      </div>
+      <!-- </div> -->
+    </section>
+  </body>
 </html>
