Added dom functionality

--- a/hangman.html
+++ b/hangman.html
@@ -17,41 +17,54 @@
     <h1 class="main-heading">Hangman</h1>
     <section class="game">
       <div class="game__word" id="hangmanWord"></div>
-      <div class="game__picture" id="hangmanPicture"></div>
+      <div class="game__picture" id="hangmanPicture">
+        <div class="hangman_wrapper" id="hangmanWrapper">
+          <div class="hangman_platform invisible"></div>
+          <div class="hangman_column invisible"></div>
+          <div class="hangman_beam invisible"></div>
+          <div class="hangman_rope invisible"></div>
+          <div class="hangman_head invisible"></div>
+          <div class="hangman_torso invisible"></div>
+          <div class="hangman_arm-left invisible"></div>
+          <div class="hangman_arm-right invisible"></div>
+          <div class="hangman_leg-left invisible"></div>
+          <div class="hangman_leg-right invisible"></div>
+        </div>
+      </div>
     </section>
     <section class="input">
       <!-- <div class="input__container"> -->
       <div class="input__row-1">
-        <button class="keyboard__button" id="qButton">Q</button>
-        <button class="keyboard__button" id="wButton">W</button>
-        <button class="keyboard__button" id="eButton">E</button>
-        <button class="keyboard__button" id="rButton">R</button>
-        <button class="keyboard__button" id="tButton">T</button>
-        <button class="keyboard__button" id="yButton">Y</button>
-        <button class="keyboard__button" id="uButton">U</button>
-        <button class="keyboard__button" id="iButton">I</button>
-        <button class="keyboard__button" id="oButton">O</button>
-        <button class="keyboard__button" id="pButton">P</button>
+        <button class="keyboard__button default" id="qButton">Q</button>
+        <button class="keyboard__button default" id="wButton">W</button>
+        <button class="keyboard__button default" id="eButton">E</button>
+        <button class="keyboard__button default" id="rButton">R</button>
+        <button class="keyboard__button default" id="tButton">T</button>
+        <button class="keyboard__button default" id="yButton">Y</button>
+        <button class="keyboard__button default" id="uButton">U</button>
+        <button class="keyboard__button default" id="iButton">I</button>
+        <button class="keyboard__button default" id="oButton">O</button>
+        <button class="keyboard__button default" id="pButton">P</button>
       </div>
       <div class="input__row-2">
-        <button class="keyboard__button" id="aButton">A</button>
-        <button class="keyboard__button" id="sButton">S</button>
-        <button class="keyboard__button" id="dButton">D</button>
-        <button class="keyboard__button" id="fButton">F</button>
-        <button class="keyboard__button" id="gButton">G</button>
-        <button class="keyboard__button" id="hButton">H</button>
-        <button class="keyboard__button" id="jButton">J</button>
-        <button class="keyboard__button" id="kButton">K</button>
-        <button class="keyboard__button" id="lButton">L</button>
+        <button class="keyboard__button default" id="aButton">A</button>
+        <button class="keyboard__button default" id="sButton">S</button>
+        <button class="keyboard__button default" id="dButton">D</button>
+        <button class="keyboard__button default" id="fButton">F</button>
+        <button class="keyboard__button default" id="gButton">G</button>
+        <button class="keyboard__button default" id="hButton">H</button>
+        <button class="keyboard__button default" id="jButton">J</button>
+        <button class="keyboard__button default" id="kButton">K</button>
+        <button class="keyboard__button default" id="lButton">L</button>
       </div>
       <div class="input__row-3">
-        <button class="keyboard__button" id="zButton">Z</button>
-        <button class="keyboard__button" id="xButton">X</button>
-        <button class="keyboard__button" id="cButton">C</button>
-        <button class="keyboard__button" id="vButton">V</button>
-        <button class="keyboard__button" id="bButton">B</button>
-        <button class="keyboard__button" id="nButton">N</button>
-        <button class="keyboard__button" id="mButton">M</button>
+        <button class="keyboard__button default" id="zButton">Z</button>
+        <button class="keyboard__button default" id="xButton">X</button>
+        <button class="keyboard__button default" id="cButton">C</button>
+        <button class="keyboard__button default" id="vButton">V</button>
+        <button class="keyboard__button default" id="bButton">B</button>
+        <button class="keyboard__button default" id="nButton">N</button>
+        <button class="keyboard__button default" id="mButton">M</button>
       </div>
       <!-- </div> -->
     </section>
