added game over, new game and used words

--- a/hangman.html
+++ b/hangman.html
@@ -32,6 +32,14 @@
         </div>
       </div>
     </section>
+    <section class="bonus-buttons">
+      <button class="bonus-buttons__previous" id="prevButton">
+        Previous Words
+      </button>
+      <button class="bonus-buttons__new invisible" id="newGameButton">
+        New Game
+      </button>
+    </section>
     <section class="input">
       <!-- <div class="input__container"> -->
       <div class="input__row-1">
@@ -68,5 +76,6 @@
       </div>
       <!-- </div> -->
     </section>
+    <section class="overlay invisible" id="prevWordDisplay"></section>
   </body>
 </html>
