cleaned up the code/display

--- a/hangman.html
+++ b/hangman.html
@@ -76,6 +76,9 @@
       </div>
       <!-- </div> -->
     </section>
-    <section class="overlay invisible" id="prevWordDisplay"></section>
+    <section class="overlay invisible" id="prevWordDisplay">
+      <h1 class="overlay__heading">Previous Words</h1>
+      <p class="overlay__words" id="previousWords"></p>
+    </section>
   </body>
 </html>
